# dovecot

./: .gitignore  ChangeLog  INSTALL  Makefile.in  NEWS  README  TODO  aclocal.m4  buildinfo.commit  config.h  config.h.in  configure  configure.ac  configure.in  dovecot-example.conf  dovecot-version.h  dovecot_1.2.15.orig.tar.gz.delta  dovecot_1.2.15.orig.tar.gz.id  dovecot_2.0.10.orig.tar.gz.delta  dovecot_2.0.10.orig.tar.gz.id  dovecot_2.0.11.orig.tar.gz.delta  dovecot_2.0.11.orig.tar.gz.id  dovecot_2.0.12.orig.tar.gz.delta  dovecot_2.0.12.orig.tar.gz.id  dovecot_2.0.13.orig.tar.gz.delta  dovecot_2.0.13.orig.tar.gz.id  dovecot_2.0.14.orig.tar.gz.delta  dovecot_2.0.14.orig.tar.gz.id  dovecot_2.0.15.orig.tar.gz.delta  dovecot_2.0.15.orig.tar.gz.id  dovecot_2.0.18.orig.tar.gz.delta  dovecot_2.0.18.orig.tar.gz.id  dovecot_2.0.6.orig.tar.gz.delta  dovecot_2.0.6.orig.tar.gz.id  dovecot_2.0.8.orig.tar.gz.delta  dovecot_2.0.8.orig.tar.gz.id  dovecot_2.0.9.orig.tar.gz.delta  dovecot_2.0.9.orig.tar.gz.id  dovecot_2.1.16.orig.tar.gz.delta  dovecot_2.1.16.orig.tar.gz.id  (+125 more)
.github/workflows/: build-deb.yml  build-staging-deb.yml
debian/: README.source  autogen.sh  changelog  control  copyright  dovecot-ce-core.NEWS  dovecot-ce-core.README.Debian  dovecot-ce-core.install  dovecot-ce-core.maintscript  dovecot-ce-core.manpages  dovecot-ce-core.postrm  dovecot-ce-core.preinst  dovecot-ce-core.prerm  dovecot-ce-dev.README.Debian  dovecot-ce-dev.dirs  dovecot-ce-imapd.links  dovecot-ce-imapd.postinst  dovecot-ce-ldap.dirs  dovecot-ce-ldap.postinst  dovecot-ce-ldap.postrm  dovecot-ce-lmtpd.dirs  dovecot-ce-lua.links  dovecot-ce-mysql.links  dovecot-ce-pop3d.dirs  dovecot-ce-pop3d.postinst  dovecot-ce-pop3d.prerm  dovecot-ce-solr.dirs  dovecot-ce-submissiond.dirs  dovecot-ce-submissiond.links  dovecot-ce-submissiond.postinst  dovecot-ce-submissiond.postrm  dovecot-ce-submissiond.prerm  dovecot-ce-submissiond.ufw.profile  dovecot-common.NEWS.Debian  dovecot-common.README.Debian  dovecot-common.default  dovecot-common.dirs  dovecot-common.docs  dovecot-common.dovecot.cron.daily  dovecot-common.init  (+95 more)
debian/patches/: 00list  (+167 more)
doc/: Makefile.am  Makefile.in  dovecot-ldap-example.conf  variables.txt
doc/example-config/: Makefile.in
doc/example-config/conf.d/: Makefile.in
doc/man/: Makefile.in
doc/wiki/: ACL.txt  AixPluginsSupport.txt  AttachmentIndicator.txt  AuthDatabase.CheckPassword.txt  AuthDatabase.Dict.txt  AuthDatabase.LDAP.AuthBinds.txt  AuthDatabase.LDAP.PasswordLookups.txt  AuthDatabase.LDAP.Userdb.txt  AuthDatabase.LDAP.txt  AuthDatabase.Lua.txt  AuthDatabase.Passwd.txt  AuthDatabase.PasswdFile.txt  AuthDatabase.SQL.txt  AuthDatabase.VPopMail.txt  AuthDatabase.txt  Authentication.Caching.txt  Authentication.Kerberos.txt  Authentication.MasterUsers.txt  Authentication.Mechanisms.DigestMD5.txt  Authentication.Mechanisms.NTLM.txt  Authentication.Mechanisms.Winbind.txt  Authentication.Mechanisms.txt  Authentication.MultipleDatabases.txt  Authentication.PasswordSchemes.txt  Authentication.Penalty.txt  Authentication.Policy.txt  Authentication.RestrictAccess.txt  Authentication.txt  BasicConfiguration.txt  Chrooting.txt  Clients.NegativeUIDs.txt  Clients.txt  CommandLine.txt  CompilingSource.txt  ConfigFile.txt  Debugging.Authentication.txt  Debugging.ProcessTracing.txt  Debugging.Rawlog.txt  Debugging.Thunderbird.txt  Design.Arrays.txt  (+260 more)
dovecot-managesieve/: AUTHORS  ChangeLog  DESIGN  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.in  dmanagesieve-config.h.in
dovecot-managesieve/src/: Makefile.am  Makefile.in
dovecot-managesieve/src/lib-cmusieve/: Makefile.am  Makefile.in  map.c  sieve-common.h  sieve-script.c  sieve.c  sieve.h
dovecot-managesieve/src/lib-managesieve/: Makefile.am  Makefile.in  managesieve-parser.c  managesieve-parser.h  managesieve-quote.c
dovecot-managesieve/src/lib-sievestorage/: Makefile.am  Makefile.in  sieve-storage-list.c  sieve-storage-list.h  sieve-storage-private.h  sieve-storage-save.c  sieve-storage-save.h  sieve-storage-script.c  sieve-storage-script.h  sieve-storage.c  sieve-storage.h
dovecot-managesieve/src/managesieve/: Makefile.am  Makefile.in  client.c  client.h  cmd-capability.c  cmd-deletescript.c  cmd-getscript.c  cmd-havespace.c  cmd-listscripts.c  cmd-logout.c  cmd-putscript.c  cmd-renamescript.c  cmd-setactive.c  commands.c  commands.h  common.h  main.c
dovecot-managesieve/src/managesieve-login/: Makefile.am  Makefile.in  client-authenticate.c  client-authenticate.h  client.c  client.h  managesieve-proxy.c  managesieve-proxy.h
dovecot-sieve/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  configure  configure.in  dsieve-config.h.in
dovecot-sieve/src/: Makefile.am  Makefile.in  cmusieve-plugin.c  cmusieve-plugin.h  imparse.c  imparse.h  libconfig.h  map.c  map.h  sieve-cmu.c  xmalloc.h
dovecot-sieve/src/libsieve/: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  addr-lex.c  addr-lex.l  addr.c  addr.h  addr.y  bc_dump.c  bc_emit.c  bc_eval.c  bc_generate.c  bytecode.h  comparator.c  comparator.h  interp.c  interp.h  message.c  message.h  parseaddr.c  parseaddr.h  script.c  script.h  sieve-lex.c  sieve-lex.l  sieve.c  sieve.h  sieve.y  sieve_err.c  sieve_err.et  sieve_err.h  sieve_interface.h  sievec.c  sieved.c  tree.c  tree.h
pigeonhole/: ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac  dummy-config.h.in  pigeonhole-version.h
specs/: dovecot-2.0-defaultconfig.patch  dovecot-2.1.10-waitonline.patch  dovecot-2.2.13-online.patch  dovecot-2.2.20-initbysystemd.patch  dovecot-2.2.22-systemd_w_protectsystem.patch  dovecot-ce.spec
src/: Makefile.am  Makefile.in
src/lib-dict/: Makefile.am  Makefile.in  dict-client.c  dict-db.c  dict-file.c  dict-sql-settings.c  dict-sql.c  dict.c
src/lib-storage/subscription-file/: Makefile.am  Makefile.in  subscription-file.c
src/util/: Makefile.am  Makefile.in  authtest.c  dovecotpw.c  idxview.c  logview.c  maildirlock.c  rawlog.c  threadview.c
testing/: run-test-valgrind-supp.sh
(+746 files in other folders)
