docdir = $(datadir)/doc/dovecot
wikidir = $(docdir)/wiki

EXTRA_DIST = \
	$(wiki_DATA)

wiki_DATA = ACL.txt \
	AixPluginsSupport.txt \
	AuthDatabase.LDAP.txt \
	AuthDatabase.PasswdFile.txt \
	AuthDatabase.Passwd.txt \
	AuthDatabase.SQL.txt \
	AuthDatabase.txt \
	AuthDatabase.VPopMail.txt \
	Authentication.Kerberos.txt \
	Authentication.MasterUsers.txt \
	Authentication.Mechanisms.txt \
	Authentication.MultipleDatabases.txt \
	Authentication.PasswordSchemes.txt \
	Authentication.RestrictAccess.txt \
	Authentication.txt \
	BasicConfiguration.txt \
	Chrooting.txt \
	Clients.NegativeUIDs.txt \
	Clients.txt \
	CommandLine.txt \
	CompilingSource.txt \
	Debugging.Authentication.txt \
	Debugging.ProcessTracing.txt \
	Debugging.Thunderbird.txt \
	Design.AuthProcess.txt \
	Design.Indexes.Cache.txt \
	Design.Indexes.MailIndexApi.txt \
	Design.Indexes.MainIndex.txt \
	Design.Indexes.TransactionLog.txt \
	Design.Indexes.txt \
	Design.MailProcess.txt \
	Design.Processes.txt \
	Design.txt \
	FindMailLocation.txt \
	FinishBasicConfiguration.txt \
	HowTo.EximAndDovecotSASL.txt \
	HowTo.PostfixAndDovecotSASL.txt \
	HowTo.SimpleVirtualInstall.txt \
	HowTo.txt \
	IndexFiles.txt \
	InetdInstall.txt \
	Iptables.txt \
	LDA.Exim.txt \
	LDA.Postfix.txt \
	LDA.Qmail.txt \
	LDA.Sendmail.txt \
	LDA.Sieve.txt \
	LDA.txt \
	Logging.txt \
	LoginProcess.txt \
	MailboxFormat.dbox.txt \
	MailboxFormat.Maildir.txt \
	MailboxFormat.mailstore.txt \
	MailboxFormat.mbox.txt \
	MailboxFormat.mbx.txt \
	MailboxFormat.MH.txt \
	MailboxFormat.txt \
	maildrop.txt \
	MailLocation.LocalDisk.txt \
	MailLocation.Maildir.txt \
	MailLocation.Mbox.txt \
	MailLocation.SharedDisk.txt \
	MailLocation.txt \
	MboxLocking.txt \
	MboxProblems.txt \
	MDA.txt \
	Migration.Courier.txt \
	Migration.Cyrus.txt \
	Migration.Linuxconf.txt \
	Migration.MailFormat.txt \
	Migration.txt \
	Migration.UW.txt \
	MissingMailboxes.txt \
	MTA.txt \
	mutt.txt \
	Namespaces.txt \
	NFS.txt \
	OSCompatibility.txt \
	PasswordDatabase.BSDAuth.txt \
	PasswordDatabase.CheckPassword.txt \
	PasswordDatabase.ExtraFields.AllowNets.txt \
	PasswordDatabase.ExtraFields.Host.txt \
	PasswordDatabase.ExtraFields.NoDelay.txt \
	PasswordDatabase.ExtraFields.NoLogin.txt \
	PasswordDatabase.ExtraFields.Proxy.txt \
	PasswordDatabase.ExtraFields.txt \
	PasswordDatabase.ExtraFields.User.txt \
	PasswordDatabase.PAM.txt \
	PasswordDatabase.Shadow.txt \
	PasswordDatabase.txt \
	PerformanceTuning.txt \
	Plugins.Convert.txt \
	Plugins.Expire.txt \
	Plugins.Lazyexpunge.txt \
	Plugins.MailLog.txt \
	Plugins.Trash.txt \
	Plugins.txt \
	POP3Server.txt \
	PopBSMTPAndDovecot.txt \
	PopRelay.txt \
	PostLoginScripting.txt \
	QuickConfiguration.txt \
	Quota.Dict.txt \
	Quota.Dirsize.txt \
	Quota.FS.txt \
	Quota.Maildir.txt \
	Quota.txt \
	Rootless.txt \
	RunningDovecot.txt \
	Sasl.txt \
	SecurityTuning.txt \
	SharedMailboxes.txt \
	SSL.CertificateClientImporting.txt \
	SSL.CertificateCreation.txt \
	SSL.DovecotConfiguration.txt \
	SSL.txt \
	SystemUsers.txt \
	TestInstallation.txt \
	TestPop3Installation.txt \
	TimeMovedBackwards.txt \
	UpgradingDovecot.txt \
	UserDatabase.ExtraFields.txt \
	UserDatabase.Prefetch.txt \
	UserDatabase.Static.txt \
	UserDatabase.txt \
	UserIds.txt \
	uw2dovecot.sh.txt \
	Variables.txt \
	VirtualUsers.txt \
	WhyDoesItNotWork.txt
